# xz2-rs

./: .appveyor.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: main.yml
ci/: azure-job-test-all.yml
lzma-sys/: Cargo.toml  build.rs  config.h
lzma-sys/src/: lib.rs
lzma-sys/xz-5.2.2/: configure
lzma-sys/xz-5.2.3/windows/: liblzma.vcxproj
src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: drop-incomplete.rs  tokio.rs  xz.rs
